Fixed issue where the site-container was not centered on a large screen

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ header button:focus{
 .site-section{
     left: 0;
     position: absolute;
+    right: 0;
 }
 .site-section.menu-open{
     right: 0;
